tests/ui/fail/exhaustive_match_greeks.stderr
error[E0004]: non-exhaustive patterns: `_` not covered
  --> tests/ui/fail/exhaustive_match_greeks.rs:10:11
   |
10 |     match greeks {
   |           ^^^^^^ pattern `_` not covered
   |
note: `GreeksCapability` defined here
  --> src/providers/mod.rs
   |
   | pub enum GreeksCapability {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: the matched value is of type `GreeksCapability`
   = note: `GreeksCapability` is marked as non-exhaustive, so a wildcard `_` is necessary to match exhaustively
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
13 ~         GreeksCapability::None => "none",
14 ~         _ => todo!(),
   |
